feat: code refatoraded by sonarqube